# kafka_ui_min

./: README.md  bundle-macos.sh  index.html  package-lock.json  package.json
docs/superpowers/plans/: 2026-07-16-full-topic-search.md  2026-07-18-consumer-group-members-offset-reset.md
docs/superpowers/specs/: 2026-07-16-full-topic-search-design.md  2026-07-18-consumer-group-members-offset-reset-design.md
src/: App.tsx  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: CommandPalette.tsx  Inspector.tsx  ResizeHandles.tsx  Sidebar.tsx  Statusbar.tsx  TabsBar.tsx  Titlebar.tsx
src/components/inspector/: PayloadPanel.tsx
src/components/views/: ClusterView.tsx  ConnectionView.tsx  FullTopicSearch.tsx  GroupDetailView.tsx  GroupsView.tsx  MessagesView.tsx  ProduceView.tsx  SettingsView.tsx  TopicsView.tsx  WelcomeView.tsx
src/lib/: dom.ts  format.ts  kafka.ts  messageFilter.ts  monaco.ts  persist.ts  queries.ts  tabs.test.mjs  types.ts  useSort.ts
src/styles/: components.css  layout.css  views.css
src/ui/: Combobox.tsx  DateTimeModal.tsx  Icon.tsx  JsonEditor.tsx  Pagination.tsx
