[package]
name = "kafkamin"
version = "1.0.0-alpha"
description = "Minimal Kafka/Redpanda desktop client"
edition = "2021"

[lib]
name = "kafkamin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rdkafka = { version = "0.37", features = ["cmake-build", "ssl-vendored"] }
keyring = { version = "3", features = ["apple-native"] }

[profile.release]
lto = true
codegen-units = 1
